--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -4,17 +4,19 @@
   height: 100vh;
 }
 .left {
-  min-height: 30%;
-  background: linear-gradient(
+  height: 30%;
+  /* background: linear-gradient(
     90deg,
     var(--p-c-purple) 0%,
     var(--p-c-blue) 100%
-  );
+  ); */
+  background:  no-repeat url('/images/bg-main-mobile.png');
+  background-size: cover;
+  padding: 0 2rem;
 }
 .creditCardContainer {
   position: relative;
-  margin: 2rem;
-  height: 100%;
+  margin: 2rem auto;
   max-width: 50rem;
 }
 .cardFront {
@@ -46,6 +48,7 @@
   align-self: flex-end;
   text-transform: uppercase;
   letter-spacing: 0.1rem;
+  overflow: hidden;
 }
 .cardFrontContent span:last-child {
   justify-self: end;
@@ -72,15 +75,19 @@
   right: 12%;
 }
 .right {
-  min-height: 70%;
+  height: 70%;
   background-color: var(--n-c-white);
   display: flex;
   align-items: flex-end;
+  justify-content: center;
+  max-height: 60rem;
 }
 .cardForm {
+  width: 100%;
   height: 100%;
   padding: 2rem;
   display: grid;
+  max-width: 50rem;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto;
   max-height: 38rem;
@@ -92,14 +99,14 @@
   grid-template-rows: 3rem 4rem;
   position: relative;
 }
-.cardForm p span{
+.cardForm p span {
   position: absolute;
   display: flex;
-  gap: .5rem;
+  gap: 0.5rem;
   right: 0;
   justify-content: flex-end;
   align-items: center;
-  bottom: -.5rem;
+  bottom: -0.5rem;
   color: var(--p-c-red);
 }
 .cardForm p:nth-child(3) {
@@ -117,4 +124,71 @@
 }
 .cardForm button {
   grid-column: 1 / span 2;
+  align-self: flex-end;
+}
+.successfull {
+  height: 100%;
+  grid-column: 1 / span 2;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+.successfull img {
+  margin-bottom: 2rem;
+}
+.successfull h5 {
+  color: var(--n-c-very-dark-violet);
+  font-weight: normal;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+}
+.successfull span {
+  font-size: 1.5rem;
+  color: var(--n-c-dark-grayish-violet);
+}
+
+@media screen and (min-width: 1440px) {
+  .main {
+    width: 100%;
+    flex-flow: row nowrap;
+  }
+  .right {
+    width: 65%;
+    align-items: center;
+    max-height: none;
+    height: 100%;
+  }
+  .left {
+    background:  no-repeat url('/images/bg-main-desktop.png');
+    background-size: cover;
+    width: 35%;
+    max-width: 55rem;
+    height: 100%;
+  }
+  .creditCardContainer {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    height: 50%;
+    width: 50%;
+    margin: -15% 0 0 -40%;
+  }
+  .cardFront {
+    top: 0;
+  }
+  .cardBack {
+    top: auto;
+    bottom: 0;
+  }
+  .cardFrontContent p {
+    font-size: 4em;
+  }
+  .cardBackContent p {
+    font-size: 2.5em;
+  }
+  .cardFrontContent span {
+    font-size: 2.5em;
+  }
 }
