--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,6 +19,7 @@
   --label-font-size: 1.4rem;
   --button-font-size: 1.8rem;
   --span-font-size: 1.2rem;
+  --h5-font-size: 2.5rem;
 }
 
 * {
@@ -37,11 +38,15 @@ body {
 p,
 button,
 span,
+h5,
 input {
   font-family: var(--font-space-grotesk);
 }
 p {
   font-size: var(--p-font-size);
+}
+h5 {
+  font-size: var(--h5-font-size);
 }
 span {
   font-size: var(--span-font-size);
